fix(styles): blog styling adjustments * made h3 + h4 tags larger in font size * add `overflow-x: scroll` to `pre` + `code` blocks * fixed styling of category blog post back link

--- a/styles/Post.module.scss
+++ b/styles/Post.module.scss
@@ -20,6 +20,12 @@
     background: var(--soft-lazer);
   }
 
+  // Override link styles
+  a:has(.category) {
+    text-decoration: none;
+    color: white;
+  }
+
   .category {
     background-color: var(--flag-pink);
     padding: 0.25rem;
@@ -66,6 +72,7 @@
   pre {
     margin-top: 10px;
     margin-bottom: 10px;
+    overflow-x: scroll;
   }
 
   h3 {
